--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@form-validation/bundle": "^2.4.0",
+        "@form-validation/core": "^2.4.0",
+        "@form-validation/plugin-auto-focus": "^2.4.0",
+        "@form-validation/plugin-bootstrap5": "^2.4.0",
+        "@form-validation/plugin-framework": "^2.4.0",
+        "@form-validation/plugin-message": "^2.4.0",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.7",
         "hammerjs": "^2.0.8",
