--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.2",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^2.0.0",
         "@babel/core": "7.23.9",
         "@babel/plugin-transform-destructuring": "7.23.3",
         "@babel/plugin-transform-object-rest-spread": "7.23.4",
@@ -18,9 +14,12 @@
         "@babel/preset-env": "7.23.9",
         "ajv": "8.12.0",
         "ansi-colors": "4.1.3",
+        "autoprefixer": "^10.4.2",
+        "axios": "^1.8.2",
         "babel-loader": "9.1.3",
         "browser-sync": "3.0.2",
         "color-support": "1.1.3",
+        "concurrently": "^9.0.1",
         "css-loader": "6.9.1",
         "deepmerge": "4.3.1",
         "del": "6.1.1",
@@ -43,15 +42,16 @@
         "gulp-useref": "5.0.0",
         "html-loader": "4.2.0",
         "js-beautify": "1.15.1",
+        "laravel-vite-plugin": "^2.0.0",
         "prettier": "3.2.5",
         "sass": "1.77.1",
         "sass-loader": "14.0.0",
         "string-replace-webpack-plugin": "0.1.3",
         "style-loader": "3.3.4",
         "terser-webpack-plugin": "5.3.10",
+        "vite": "^7.0.4",
         "webpack": "5.89.0",
-        "yarn": "1.22.21",
-        "vite": "^7.0.4"
+        "yarn": "1.22.21"
     },
     "dependencies": {
         "@form-validation/bundle": "2.4.0",
@@ -63,12 +63,6 @@
         "@form-validation/plugin-field-status": "2.4.0",
         "@form-validation/plugin-framework": "2.4.0",
         "@form-validation/plugin-message": "2.4.0",
-        "@fullcalendar/core": "6.1.11",
-        "@fullcalendar/daygrid": "6.1.11",
-        "@fullcalendar/interaction": "6.1.11",
-        "@fullcalendar/list": "6.1.11",
-        "@fullcalendar/timegrid": "6.1.11",
-        "@fullcalendar/timeline": "6.1.11",
         "@popperjs/core": "2.11.8",
         "@simonwep/pickr": "1.9.0",
         "@yaireo/tagify": "4.18.3",
@@ -126,6 +120,7 @@
         "rateyo": "2.3.5",
         "remixicon": "4.2.0",
         "select2": "4.0.13",
+        "select2-bootstrap-5-theme": "^1.3.0",
         "shepherd.js": "11.2.0",
         "sortablejs": "1.15.2",
         "spinkit": "2.0.1",
